# Amazin2.0

./: ArrivalEvent.cpp  ArrivalEvent.h  CMakeLists.txt  Company.cpp  Company.h  Event.cpp  Event.h  EventQueue.cpp  EventQueue.h  Helper.cpp  Helper.h  List.cpp  List.h  Node.cpp  Node.h  Order.cpp  Order.h  PrepareEvent.cpp  PrepareEvent.h  Queue.cpp  Queue.h  README.MD  Revenue.cpp  Revenue.h  ShippingEvent.cpp  ShippingEvent.h  WorkingHour.cpp  WorkingHour.h  a.out  main.cpp
